--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Tuhui.Reception.WebUI.csproj
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Tuhui.Reception.WebUI.csproj
@@ -107,10 +107,6 @@
       <Private>True</Private>
       <HintPath>..\..\..\packages\WebGrease.1.5.2\lib\WebGrease.dll</HintPath>
     </Reference>
-    <Reference Include="Antlr3.Runtime">
-      <Private>True</Private>
-      <HintPath>..\..\..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="EntityFramework">
@@ -349,7 +345,9 @@
     <Content Include="tmap\images\marker-icon.png" />
     <Content Include="tmap\tmap.css" />
     <Content Include="tmap\tmap.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
