--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Web.config
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Web.config
@@ -6,8 +6,11 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework"
+      type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+      requirePermission="false"/>
     <section name="oracle.manageddataaccess.client"
-         type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
+      type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -15,13 +18,6 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-  <system.data>
-    <DbProviderFactories>
-      <remove invariant="Oracle.ManagedDataAccess.Client"/>
-      <add name="ODP.NET, Managed Driver" invariant="Oracle.ManagedDataAccess.Client" description="Oracle Data Provider for .NET, Managed Driver"
-        type="Oracle.ManagedDataAccess.Client.OracleClientFactory, Oracle.ManagedDataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
-    </DbProviderFactories>
-  </system.data>
   <system.web>
     <authentication mode="Forms">
       <forms loginUrl="~/ReceptionManager/LogOn" timeout="2880" />
@@ -66,21 +62,34 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <oracle.manageddataaccess.client>
-    <version number="*">
-      <dataSources>
-        <dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) "/>
-      </dataSources>
-    </version>
-  </oracle.manageddataaccess.client>
-  <connectionStrings>
-    <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client"
-      connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle"/>
-  </connectionStrings>
   <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v11.0"/>
+      </parameters>
+    </defaultConnectionFactory>
     <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
       <provider invariantName="Oracle.ManagedDataAccess.Client"
         type="Oracle.ManagedDataAccess.EntityFramework.EFOracleProviderServices, Oracle.ManagedDataAccess.EntityFramework, Version=6.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
     </providers>
   </entityFramework>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="Oracle.ManagedDataAccess.Client"/>
+      <add name="ODP.NET, Managed Driver" invariant="Oracle.ManagedDataAccess.Client" description="Oracle Data Provider for .NET, Managed Driver"
+        type="Oracle.ManagedDataAccess.Client.OracleClientFactory, Oracle.ManagedDataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
+    </DbProviderFactories>
+  </system.data>
+  <oracle.manageddataaccess.client>
+    <version number="*">
+      <dataSources>
+        <dataSource alias="oracle" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=www.tuhuitech.com)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=AQI))) "/>
+      </dataSources>
+    </version>
+  </oracle.manageddataaccess.client>
+  <connectionStrings>
+    <add name="DbReception" providerName="Oracle.ManagedDataAccess.Client"
+      connectionString="User Id=Tuhui_AQI;Password=tuhui;Data Source=oracle"/>
+  </connectionStrings>
 </configuration>
