--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/packages.config
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/packages.config
@@ -4,6 +4,9 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
   <package id="EntityFramework.zh-Hans" version="6.0.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="Oracle.ManagedDataAccess" version="12.1.2400" targetFramework="net45" />
+  <package id="Oracle.ManagedDataAccess.EntityFramework" version="12.1.2400" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="1.0.0" targetFramework="net45" />
