资源查询添加资源分类条件

--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Tuhui.Reception.WebUI.csproj
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Tuhui.Reception.WebUI.csproj
@@ -403,6 +403,8 @@
     <Content Include="Views\ReceptionManager\Resource.cshtml" />
     <Content Include="Views\ReceptionManager\ResourceModify.cshtml" />
     <Content Include="Views\ReceptionManager\JTMap.cshtml" />
+    <Content Include="Views\ReceptionManager\ResourceEvent.cshtml" />
+    <Content Include="Views\ReceptionManager\Navigation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\ASP.NET MVC\Tuhui.Common45.Mvc\Tuhui.Common45.Mvc.csproj">
