--- a/Reception/Model/Tuhui.Reception.Model/Tuhui.Reception.Model.csproj
+++ b/Reception/Model/Tuhui.Reception.Model/Tuhui.Reception.Model.csproj
@@ -46,8 +46,10 @@
   <ItemGroup>
     <Compile Include="DbReceptionContext.cs" />
     <Compile Include="Image.cs" />
+    <Compile Include="Navigation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reception_Resource.cs" />
+    <Compile Include="Reception_ResourceEvent.cs" />
     <Compile Include="Reception_ResourceType.cs" />
     <Compile Include="Reception_UserInfo.cs" />
     <Compile Include="Video.cs" />
