--- a/Reception/Service/Tuhui.Reception.Service/Tuhui.Reception.Service.csproj
+++ b/Reception/Service/Tuhui.Reception.Service/Tuhui.Reception.Service.csproj
@@ -44,11 +44,15 @@
   <ItemGroup>
     <Compile Include="IImageService.cs" />
     <Compile Include="ImageService.cs" />
+    <Compile Include="INavigationService.cs" />
+    <Compile Include="IReception_ResourceEventService.cs" />
     <Compile Include="IReception_ResourceService.cs" />
     <Compile Include="IReception_ResourceTypeService.cs" />
     <Compile Include="IReception_UserInfoService.cs" />
     <Compile Include="IVideoService.cs" />
+    <Compile Include="NavigationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reception_ResourceEventService.cs" />
     <Compile Include="Reception_ResourceService.cs" />
     <Compile Include="Reception_ResourceTypeService.cs" />
     <Compile Include="Reception_UserInfoService.cs" />
