--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Tuhui.Reception.WebUI.csproj
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Tuhui.Reception.WebUI.csproj
@@ -736,6 +736,7 @@
     <Content Include="Scripts\uploadify\check-exists.php" />
     <Content Include="Scripts\uploadify\index.php" />
     <Content Include="Scripts\uploadify\uploadify.php" />
+    <Content Include="Views\ReceptionManager\NavigationModify.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\ASP.NET MVC\Tuhui.Common45.Mvc\Tuhui.Common45.Mvc.csproj">
