--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Tuhui.Reception.WebUI.csproj
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Tuhui.Reception.WebUI.csproj
@@ -338,6 +338,15 @@
     <Content Include="Images\StatisticIcon\d_12.png" />
     <Content Include="Images\StatisticIcon\d_14.png" />
     <Content Include="Images\StatisticIcon\d_16.png" />
+    <Content Include="layer\extend\layer.ext.js" />
+    <Content Include="layer\layer.js" />
+    <Content Include="layer\skin\default\icon-ext.png" />
+    <Content Include="layer\skin\default\icon.png" />
+    <Content Include="layer\skin\default\loading-0.gif" />
+    <Content Include="layer\skin\default\loading-1.gif" />
+    <Content Include="layer\skin\default\loading-2.gif" />
+    <Content Include="layer\skin\layer.css" />
+    <Content Include="layer\skin\layer.ext.css" />
     <Content Include="Scripts\ckeditor\adapters\jquery.js" />
     <Content Include="Scripts\ckeditor\build-config.js" />
     <Content Include="Scripts\ckeditor\ckeditor.js" />
