--- a/浦口水费服务/SFService/SFService/SFService/SFService.csproj
+++ b/浦口水费服务/SFService/SFService/SFService/SFService.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\PublishProfiles\SFService.pubxml" />
+    <Content Include="SF.ashx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -70,14 +71,12 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="SF.asmx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SF.asmx.cs">
-      <DependentUpon>SF.asmx</DependentUpon>
-      <SubType>Component</SubType>
+    <Compile Include="SF.ashx.cs">
+      <DependentUpon>SF.ashx</DependentUpon>
     </Compile>
   </ItemGroup>
   <PropertyGroup>
