添加暂无图片

--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Tuhui.Reception.WebUI.csproj
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Tuhui.Reception.WebUI.csproj
@@ -235,6 +235,7 @@
     <Content Include="Content\images\reception\map_wx.png" />
     <Content Include="Content\images\reception\navi_close.png" />
     <Content Include="Content\images\reception\navi_open.png" />
+    <Content Include="Content\images\reception\no_data.png" />
     <Content Include="Content\images\reception\wkg_big.png" />
     <Content Include="Content\images\reception\wkg_small.png" />
     <Content Include="Content\images\reception\ykg_big.png" />
